deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adfilter
spec:
  selector:
    app: adfilter
  ports:
    - name: http
      port: 80
      targetPort: http
