deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adassay-web
spec:
  selector:
    app: adassay-web
  ports:
    - name: http
      port: 80
      targetPort: http
